--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "baseUrl": ".",                            
   },
   "include": [
-    "src/**/*"
+    "src/**/*.ts"
   ]                          
 }
 
