--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "ts-node src/index.ts",
-    "dev": "ts-node-dev src/index.ts",
-    "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "./node_modules/typescript/bin/tsc",
+    "start": "node dist/index.js",
+    "dev": "./node_modules/.bin/ts-node-dev src/index.ts"
+
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
@@ -16,6 +16,11 @@
     "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "^5.51.0",
+    "esm": "^3.2.25",
+    "jest": "^29.4.3",
+    "redis-mock": "^0.56.3",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.0.5",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.5"
   },
